Closed Bug 80543 Opened 25 years ago Closed 25 years ago

nsOutlinerBoxObject::RowCountChanged can behave incorrectly

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.1

People

(Reporter: bryner, Assigned: bryner)

References

Details

Attachments

(2 files)

Calling rowCountChanged when you are removing rows and are not scrolled to the top of the outliner can cause it to miscompute mTopRowIndex, which causes it to ask the outliner view for the wrong row indices (which causes a totally incorrect display).
Blocks: 75838
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
Attached patch patchSplinter Review
bryner, is this the bug where i got the wacky highlighting after double-clicking a dir which had fewer contents than its parent?
sairuh -- Yep, this is the root cause of the problem.
sr=hyatt
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I just built on Linux and now crash trying to wheelscroll in filepicker OR after having selected a file and then wheelscrolling. Twice in a row in nsCacheEntryHashTable::GetKey () from dist/bin/components/libnkcache.so Using RH's gcc2.96-81 so perhaps not all see this but thought it worth mentioning.
Sorry. The crash is unrelated. (it's all over the place here - editing AB card, opening in new window - even closing one.)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: