Bug 80543 -- outliner RowCountChanged behaving incorrectly on row removal.  r=sspitzer, sr=hyatt.